@@ -9,58 +9,64 @@ import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Stream;
 
+import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 
-class CountdownLatchExampleIntegrationTest {
-
+public class CountdownLatchExampleIntegrationTest {
    @Test
-   void whenParallelProcessing_thenMainThreadWillBlockUntilCompletion() throws InterruptedException {
+   public void whenParallelProcessing_thenMainThreadWillBlockUntilCompletion() throws InterruptedException {
+      // Given
       List<String> outputScraper = Collections.synchronizedList(new ArrayList<>());
       CountDownLatch countDownLatch = new CountDownLatch(5);
       List<Thread> workers = Stream.generate(() -> new Thread(new Worker(outputScraper, countDownLatch)))
             .limit(5)
-            .toList();
+            .collect(toList());
 
+      // When
       workers.forEach(Thread::start);
       countDownLatch.await(); // Block until workers finish
       outputScraper.add("Latch released");
 
-      assertThat(outputScraper).containsExactly("Counted down", "Counted down", "Counted down",
-            "Counted down", "Counted down", "Latch released");
+      // Then
+      assertThat(outputScraper).containsExactly("Counted down", "Counted down", "Counted down", "Counted down", "Counted down", "Latch released");
    }
 
    @Test
-   void whenFailingToParallelProcess_thenMainThreadShouldTimeout() throws InterruptedException {
+   public void whenFailingToParallelProcess_thenMainThreadShouldTimeout() throws InterruptedException {
+      // Given
       List<String> outputScraper = Collections.synchronizedList(new ArrayList<>());
       CountDownLatch countDownLatch = new CountDownLatch(5);
       List<Thread> workers = Stream.generate(() -> new Thread(new BrokenWorker(outputScraper, countDownLatch)))
             .limit(5)
-            .toList();
+            .collect(toList());
 
+      // When
       workers.forEach(Thread::start);
       final boolean result = countDownLatch.await(3L, TimeUnit.SECONDS);
 
+      // Then
       assertThat(result).isFalse();
    }
 
    @Test
-   void whenDoingLotsOfThreadsInParallel_thenStartThemAtTheSameTime() throws InterruptedException {
+   public void whenDoingLotsOfThreadsInParallel_thenStartThemAtTheSameTime() throws InterruptedException {
+      // Given
       List<String> outputScraper = Collections.synchronizedList(new ArrayList<>());
       CountDownLatch readyThreadCounter = new CountDownLatch(5);
       CountDownLatch callingThreadBlocker = new CountDownLatch(1);
       CountDownLatch completedThreadCounter = new CountDownLatch(5);
-      List<Thread> workers = Stream.generate(() -> new Thread(new WaitingWorker(outputScraper, readyThreadCounter, callingThreadBlocker, completedThreadCounter)))
-            .limit(5)
-            .toList();
+      List<Thread> workers = Stream.generate(() -> new Thread(new WaitingWorker(outputScraper, readyThreadCounter, callingThreadBlocker, completedThreadCounter))).limit(5).collect(toList());
 
+      // When
       workers.forEach(Thread::start);
       readyThreadCounter.await(); // Block until workers start
       outputScraper.add("Workers ready");
-      callingThreadBlocker.countDown();
+      callingThreadBlocker.countDown(); // Start workers
       completedThreadCounter.await(); // Block until workers finish
       outputScraper.add("Workers complete");
 
-      assertThat(outputScraper).containsExactly("Workers ready", "Counted down", "Counted down", "Counted down",
-            "Counted down", "Counted down", "Workers complete");
+      // Then
+      assertThat(outputScraper).containsExactly("Workers ready", "Counted down", "Counted down", "Counted down", "Counted down", "Counted down", "Workers complete");
    }
+
 }
