@@ -2,6 +2,7 @@ package cn.tuyucheng.taketoday.doublecolon;
 
 import cn.tuyucheng.taketoday.doublecolon.function.TriFunction;
 import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -10,20 +11,23 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.function.BiFunction;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static cn.tuyucheng.taketoday.doublecolon.ComputerUtils.after2010Predicate;
+import static cn.tuyucheng.taketoday.doublecolon.ComputerUtils.blackPredicate;
+import static cn.tuyucheng.taketoday.doublecolon.ComputerUtils.filter;
 
-class ComputerUtilsUnitTest {
+public class ComputerUtilsUnitTest {
 
    @BeforeEach
-   void setup() {
+   public void setup() {
    }
 
    @AfterEach
-   void tearDown() {
+   public void tearDown() {
    }
 
    @Test
-   void testConstructorReference() {
+   public void testConstructorReference() {
+
       Computer c1 = new Computer(2015, "white");
       Computer c2 = new Computer(2009, "black");
       Computer c3 = new Computer(2014, "black");
@@ -37,22 +41,24 @@ class ComputerUtilsUnitTest {
 
       List<Computer> inventory = Arrays.asList(c1, c2, c3, c4, c5, c6);
 
-      List<Computer> blackComputer = ComputerUtils.filter(inventory, ComputerUtils.blackPredicate);
-      assertEquals(blackComputer.size(), 4, "The black Computers are: ");
+      List<Computer> blackComputer = filter(inventory, blackPredicate);
+      Assertions.assertEquals("The black Computers are: ", blackComputer.size(), 4);
 
-      List<Computer> after2010Computer = ComputerUtils.filter(inventory, ComputerUtils.after2010Predicate);
-      assertEquals(after2010Computer.size(), 3, "The Computer bought after 2010 are: ");
+      List<Computer> after2010Computer = filter(inventory, after2010Predicate);
+      Assertions.assertEquals("The Computer bought after 2010 are: ", after2010Computer.size(), 3);
 
-      List<Computer> before2011Computer = ComputerUtils.filter(inventory, c -> c.getAge() < 2011);
-      assertEquals(before2011Computer.size(), 3, "The Computer bought before 2011 are: ");
+      List<Computer> before2011Computer = filter(inventory, c -> c.getAge() < 2011);
+      Assertions.assertEquals("The Computer bought before 2011 are: ", before2011Computer.size(), 3);
 
       inventory.sort(Comparator.comparing(Computer::getAge));
 
-      assertEquals(c6, inventory.get(0), "Oldest Computer in inventory");
+      Assertions.assertEquals("Oldest Computer in inventory", c6, inventory.get(0));
+
    }
 
    @Test
-   void testStaticMethodReference() {
+   public void testStaticMethodReference() {
+
       Computer c1 = new Computer(2015, "white", 35);
       Computer c2 = new Computer(2009, "black", 65);
       TriFunction<Integer, String, Integer, Computer> c6Function = Computer::new;
@@ -61,24 +67,27 @@ class ComputerUtilsUnitTest {
       List<Computer> inventory = Arrays.asList(c1, c2, c3);
       inventory.forEach(ComputerUtils::repair);
 
-      assertEquals(Integer.valueOf(100), c1.getHealty(), "Computer repaired");
+      Assertions.assertEquals("Computer repaired", new Integer(100), c1.getHealty());
    }
 
    @Test
-   void testInstanceMethodArbitraryObjectParticularType() {
+   public void testInstanceMethodArbitraryObjectParticularType() {
+
       Computer c1 = new Computer(2015, "white", 35);
       Computer c2 = new MacbookPro(2009, "black", 65);
       List<Computer> inventory = Arrays.asList(c1, c2);
       inventory.forEach(Computer::turnOnPc);
+
    }
 
    @Test
-   void testSuperMethodReference() {
+   public void testSuperMethodReference() {
+
       final TriFunction<Integer, String, Integer, MacbookPro> integerStringIntegerObjectTriFunction = MacbookPro::new;
       final MacbookPro macbookPro = integerStringIntegerObjectTriFunction.apply(2010, "black", 100);
       Double initialValue = 999.99;
       final Double actualValue = macbookPro.calculateValue(initialValue);
-
-      assertEquals(766.659, actualValue, 0.0);
+      Assertions.assertEquals(766.659, actualValue, 0.0);
    }
+
 }
