@@ -19,40 +19,41 @@ import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-class FunctionalInterfaceUnitTest {
+public class FunctionalInterfaceUnitTest {
 
    private static final Logger LOG = LoggerFactory.getLogger(FunctionalInterfaceUnitTest.class);
 
    @Test
-   void whenPassingLambdaToComputeIfAbsent_thenTheValueGetComputedAndPutIntoMap() {
-      Map<String, Integer> nameMap = new HashMap<>();
-      Integer value = nameMap.computeIfAbsent("John", s -> s.length());
-
-      assertEquals(Integer.valueOf(4), nameMap.get("John"));
-      assertEquals(Integer.valueOf(4), value);
-   }
-
-   @Test
-   void whenPassingMethodReferenceToComputeIfAbsent_thenTheValueGetsComputedAndPutIntoMap() {
+   public void whenPassingLambdaToComputeIfAbsent_thenTheValueGetsComputedAndPutIntoMap() {
       Map<String, Integer> nameMap = new HashMap<>();
       Integer value = nameMap.computeIfAbsent("John", String::length);
 
-      assertEquals(Integer.valueOf(4), nameMap.get("John"));
-      assertEquals(Integer.valueOf(4), value);
+      assertEquals(new Integer(4), nameMap.get("John"));
+      assertEquals(new Integer(4), value);
    }
 
    @Test
-   void whenUsingCustomFunctionalInterfaceForPrimitives_thenCanUseItAsLambda() {
+   public void whenPassingMethodReferenceToComputeIfAbsent_thenTheValueGetsComputedAndPutIntoMap() {
+      Map<String, Integer> nameMap = new HashMap<>();
+      Integer value = nameMap.computeIfAbsent("John", String::length);
+
+      assertEquals(new Integer(4), nameMap.get("John"));
+      assertEquals(new Integer(4), value);
+   }
+
+   @Test
+   public void whenUsingCustomFunctionalInterfaceForPrimitives_thenCanUseItAsLambda() {
+
       short[] array = {(short) 1, (short) 2, (short) 3};
       byte[] transformedArray = transformArray(array, s -> (byte) (s * 2));
 
       byte[] expectedArray = {(byte) 2, (byte) 4, (byte) 6};
-
       assertArrayEquals(expectedArray, transformedArray);
+
    }
 
    @Test
-   void whenUsingBiFunction_thenCanUseItToReplaceMapValues() {
+   public void whenUsingBiFunction_thenCanUseItToReplaceMapValues() {
       Map<String, Integer> salaries = new HashMap<>();
       salaries.put("John", 40000);
       salaries.put("Freddy", 30000);
@@ -60,19 +61,20 @@ class FunctionalInterfaceUnitTest {
 
       salaries.replaceAll((name, oldValue) -> name.equals("Freddy") ? oldValue : oldValue + 10000);
 
-      assertEquals(Integer.valueOf(50000), salaries.get("John"));
-      assertEquals(Integer.valueOf(30000), salaries.get("Freddy"));
-      assertEquals(Integer.valueOf(60000), salaries.get("Samuel"));
+      assertEquals(new Integer(50000), salaries.get("John"));
+      assertEquals(new Integer(30000), salaries.get("Freddy"));
+      assertEquals(new Integer(60000), salaries.get("Samuel"));
    }
 
    @Test
-   void whenPassingLambdaToThreadConstructor_thenLambdaInferredToRunnable() {
+   public void whenPassingLambdaToThreadConstructor_thenLambdaInferredToRunnable() {
       Thread thread = new Thread(() -> LOG.debug("Hello From Another Thread"));
       thread.start();
    }
 
    @Test
-   void whenUsingSupplierToGenerateNumbers_thenCanUseItInStreamGenerate() {
+   public void whenUsingSupplierToGenerateNumbers_thenCanUseItInStreamGenerate() {
+
       int[] fibs = {0, 1};
       Stream<Integer> fibonacci = Stream.generate(() -> {
          int result = fibs[1];
@@ -85,21 +87,21 @@ class FunctionalInterfaceUnitTest {
       List<Integer> fibonacci5 = fibonacci.limit(5)
             .collect(Collectors.toList());
 
-      assertEquals(Integer.valueOf(1), fibonacci5.get(0));
-      assertEquals(Integer.valueOf(1), fibonacci5.get(1));
-      assertEquals(Integer.valueOf(2), fibonacci5.get(2));
-      assertEquals(Integer.valueOf(3), fibonacci5.get(3));
-      assertEquals(Integer.valueOf(5), fibonacci5.get(4));
+      assertEquals(new Integer(1), fibonacci5.get(0));
+      assertEquals(new Integer(1), fibonacci5.get(1));
+      assertEquals(new Integer(2), fibonacci5.get(2));
+      assertEquals(new Integer(3), fibonacci5.get(3));
+      assertEquals(new Integer(5), fibonacci5.get(4));
    }
 
    @Test
-   void whenUsingConsumerInForEach_thenConsumerExecutesForEachListElement() {
+   public void whenUsingConsumerInForEach_thenConsumerExecutesForEachListElement() {
       List<String> names = Arrays.asList("John", "Freddy", "Samuel");
       names.forEach(name -> LOG.debug("Hello, " + name));
    }
 
    @Test
-   void whenUsingBiConsumerInForEach_thenConsumerExecutesForEachMapElement() {
+   public void whenUsingBiConsumerInForEach_thenConsumerExecutesForEachMapElement() {
       Map<String, Integer> ages = new HashMap<>();
       ages.put("John", 25);
       ages.put("Freddy", 24);
@@ -109,12 +111,12 @@ class FunctionalInterfaceUnitTest {
    }
 
    @Test
-   void whenUsingPredicateInFilter_thenListValuesAreFilteredOut() {
+   public void whenUsingPredicateInFilter_thenListValuesAreFilteredOut() {
       List<String> names = Arrays.asList("Angela", "Aaron", "Bob", "Claire", "David");
 
       List<String> namesWithA = names.stream()
             .filter(name -> name.startsWith("A"))
-            .toList();
+            .collect(Collectors.toList());
 
       assertEquals(2, namesWithA.size());
       assertTrue(namesWithA.contains("Angela"));
@@ -122,7 +124,7 @@ class FunctionalInterfaceUnitTest {
    }
 
    @Test
-   void whenUsingUnaryOperatorWithReplaceAll_thenAllValuesInTheListAreReplaced() {
+   public void whenUsingUnaryOperatorWithReplaceAll_thenAllValuesInTheListAreReplaced() {
       List<String> names = Arrays.asList("bob", "josh", "megan");
 
       names.replaceAll(String::toUpperCase);
@@ -133,27 +135,32 @@ class FunctionalInterfaceUnitTest {
    }
 
    @Test
-   void whenUsingBinaryOperatorWithStreamReduce_thenResultIsSumOfValues() {
+   public void whenUsingBinaryOperatorWithStreamReduce_thenResultIsSumOfValues() {
+
       List<Integer> values = Arrays.asList(3, 5, 8, 9, 12);
 
       int sum = values.stream()
-            .reduce(0, Integer::sum);
+            .reduce(0, (i1, i2) -> i1 + i2);
 
       assertEquals(37, sum);
+
    }
 
    @Test
-   void whenComposingTwoFunctions_thenFunctionsExecuteSequentially() {
+   public void whenComposingTwoFunctions_thenFunctionsExecuteSequentially() {
+
       Function<Integer, String> intToString = Object::toString;
       Function<String, String> quote = s -> "'" + s + "'";
 
       Function<Integer, String> quoteIntToString = quote.compose(intToString);
 
       assertEquals("'5'", quoteIntToString.apply(5));
+
    }
 
    @Test
-   void whenUsingSupplierToGenerateValue_thenValueIsGeneratedLazily() {
+   public void whenUsingSupplierToGenerateValue_thenValueIsGeneratedLazily() {
+
       Supplier<Double> lazyValue = () -> {
          Uninterruptibles.sleepUninterruptibly(1000, TimeUnit.MILLISECONDS);
          return 9d;
@@ -162,17 +169,21 @@ class FunctionalInterfaceUnitTest {
       double valueSquared = squareLazy(lazyValue);
 
       assertEquals(81d, valueSquared, 0);
+
    }
 
-   double squareLazy(Supplier<Double> lazyValue) {
+   //
+
+   public double squareLazy(Supplier<Double> lazyValue) {
       return Math.pow(lazyValue.get(), 2);
    }
 
-   byte[] transformArray(short[] array, ShortToByteFunction function) {
+   public byte[] transformArray(short[] array, ShortToByteFunction function) {
       byte[] transformedArray = new byte[array.length];
       for (int i = 0; i < array.length; i++) {
          transformedArray[i] = function.applyAsByte(array[i]);
       }
       return transformedArray;
    }
+
 }
